调整自动加载

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "name": "XuanXin Zhen",
             "email": "xuanxin.zhen@gmail.com"
         }
-    ]
+    ],
+    "autoload": {
+        "classmap": [
+            "AutoLockCommand.php"
+        ]
+    }
 }
