--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "zhenxxin/yii-auto-lock",
     "description": "Auto lock when processing command actioins.",
     "require": {
-        "php": "^5.6",
+        "php": ">=5.4",
         "yiisoft/yii": "^1.1"
     },
     "license": "MIT",
